--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -69,6 +69,11 @@
 		  <li{% if page.url == site.JB.links_path %} class="active"{% endif %}>
             <a href="{{ site.JB.links_path }}" rel="nofollow" title="友情链接">友情链接</a>
           </li>
+          
+           <li{% if page.url == site.JB.music_path %} class="active"{% endif %}>
+            <a href="{{ site.JB.music_path }}" rel="nofollow" title="音乐">音乐</a>
+          </li>
+          
           <li{% if page.url == site.JB.about_path %} class="active"{% endif %}>
             <a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我">关于我</a>
           </li>
