--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -2,7 +2,7 @@
   <article class="page">
 
     <header>
-      <h1>{{ site.group }}{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+      <h1>{{ page.title }}{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
     </header>
 
     <section>
