--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -1,135 +1,113 @@
 <!DOCTYPE html>
 <!--[if IE 7 ]>    <html lang="zh-CN" class="ie7"> <![endif]-->
 <!--[if IE 8 ]>    <html lang="zh-CN" class="ie8"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html lang="zh-CN"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="zh-CN">
+<!--<![endif]-->
 
 <head>
-  <meta charset="UTF-8">
-  <!--[if IE 8 ]><meta http-equiv="X-UA-Compatible" content="IE=7"><![endif]-->
+    <meta charset="UTF-8">
+    <!--[if IE 8 ]><meta http-equiv="X-UA-Compatible" content="IE=7"><![endif]-->
+    <title>{% if page.title %} {{ site.title}}-{{ page.title }} {% else %}{{ site.title }}{% endif %}</title>
+    {% if page.keywords %}
+    <meta name="keywords" content="{{ page.keywords | join: " ," }}">{% endif %}
+    {% if page.description %}
+    <meta name="description" content="{{ page.description }}">{% endif %}
+    <meta name="author" content="{{ site.author.name }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Robots" content="All">
 
-  <title>{% if page.title %} {{ site.title}}-{{ page.title }} {% else %}{{ site.title }}{% endif %}</title>
-  {% if page.keywords %}<meta name="keywords" content="{{ page.keywords | join: "," }}">{% endif %}
-  {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
-  <meta name="author" content="{{ site.author.name }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Robots" Content="All">
-  <meta name="baidu-site-verification" content="otlrWNL0dw" />
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="/assets/img/favicon.ico">
-
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.min.css">
-  <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css">
-
-  <!-- Scripts -->
-  <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.11.3.min.js"></script>
-
- {% include lei_custom %}
-
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/assets/img/favicon.ico">
+    {% include lei_custom %}
+    <!-- Styles -->
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.min.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css">
+    <!-- Scripts -->
+    <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="/assets/lei_assets/clock_time_gbk.js"></script>
 </head>
 
 <body>
+    <div class="fixbar" style="position:fixed;width:900px;height:25px;left:0;right:0;top:0;margin:0 auto;z-index:1001;border:1px solid #EEEEEE;background: #FAFAFA;line-height:25px;">
+       <div style="float:left;"><script type="text/javascript">CalConv();</script></div>
+       <div style="float:right;">
+         <span id="search-box">{% include widgets/search_box %}</span>
+         <span><a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我">关于我</a></span>
+         <span><a href="{{ site.JB.messages_path }}" rel="nofollow" title="留言板">留言板</a></span>
+         <span>{% include lei_widgets/add_fav %}</span>         
+       </div>
+    </div>
+        <header id="top" style="background:rgba(45,135,251,0.9); padding:80px 0 20px 0">
+           <style>
+            @font-face {
+    font-family: 'beast_of_avalon';
+    src: url('/assets/lei_assets/beast_of_avalon-webfont.woff2') format('woff2'),
+         url('/assets/lei_assets/beast_of_avalon-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;}</style>
+           <div align="center" style="font-family:'beast_of_avalon',Papyrus; font-size:200%; ">
+            <p>If you do not leave me,</p>
+            <p> I will be by your side until the end.</p>
+           </div>
+            <!-- Navigation Bar -->
+            <nav id="navbar" style="margin:45px 0 25px 0;">
+                <ul>
+                    {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
+                    <li{% if page.url == home_url %} class="active" {% endif %}>
+                        <a href="{{ HOME_PATH }}" rel="nofollow" title="首页">首页</a>
+                        </li>
 
-  <div id="wrap">
-    <header id="top">
-      <!-- Home Link -->
-      <a id="logo" href="{{ HOME_PATH }}" title="回到首页">
-        <img src="{{ IMAGE_PATH }}/website-logo.png" alt="{{ site.title }}">
-      </a>
-      <!-- Navigation Bar -->
-      <nav id="navbar" valign="middle">
-        <ul>
-          {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
-          <li{% if page.url == home_url %} class="active"{% endif %}>
-            <a href="{{ HOME_PATH }}" rel="nofollow" title="首页">首页</a>
-          </li>
+                        <li{% if page.url == site.JB.PKMcategories_path %} class="active" {% endif %}>
+                            <a href="{{ site.JB.PKMcategories_path }}" rel="nofollow" title="PKM"> PKM</a>
+                            </li>
+                            <li{% if page.url == site.JB.ITcategories_path %} class="active" {% endif %}>
+                                <a href="{{ site.JB.ITcategories_path }}" rel="nofollow" title="IT"> IT</a>
+                                </li>
+                                <li{% if page.url == site.JB.DESIGNcategories_path %} class="active" {% endif %}>
+                                    <a href="{{ site.JB.DESIGNcategories_path }}" rel="nofollow" title="DESIGN">Design</a>
+                                    </li>
+                                    <li{% if page.url == site.JB.LIFEcategories_path %} class="active" {% endif %}>
+                                        <a href="{{ site.JB.LIFEcategories_path }}" rel="nofollow" title="LIFE"> Life</a>
+                                        </li>
+                                        <li{% if page.url == site.JB.music_path %} class="active" {% endif %}>
+                                            <a href="{{ site.JB.music_path }}" rel="nofollow" title="音乐">音乐</a>
+                                            </li>
+                </ul>
+            </nav>
+        </header>
+    <div id="wrap">
 
-          <li{% if page.url == site.JB.PKMcategories_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.PKMcategories_path }}" rel="nofollow" title="PKM"> PKM</a>
-          </li>
-          <li{% if page.url == site.JB.ITcategories_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.ITcategories_path }}" rel="nofollow" title="IT"> IT</a>
-          </li>
-          <li{% if page.url == site.JB.DESIGNcategories_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.DESIGNcategories_path }}" rel="nofollow" title="DESIGN">Design</a>
-          </li>
-          <li{% if page.url == site.JB.LIFEcategories_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.LIFEcategories_path }}" rel="nofollow" title="LIFE"> Life</a>
-          </li>	
-
-
-          <li{% if page.url == site.JB.tags_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.tags_path }}" rel="nofollow" title="标签">标签</a>
-          </li>
-          <li{% if page.url == site.JB.messages_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.messages_path }}" rel="nofollow" title="留言板">留言板</a>
-          </li>
-		  <li{% if page.url == site.JB.links_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.links_path }}" rel="nofollow" title="友情链接">友情链接</a>
-          </li>
-          
-           <li{% if page.url == site.JB.music_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.music_path }}" rel="nofollow" title="音乐">音乐</a>
-          </li>
-          
-          <li{% if page.url == site.JB.about_path %} class="active"{% endif %}>
-            <a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我">关于我</a>
-          </li>
-          
-        </ul>
-      </nav>
-    </header>
-	
-    <section id="main">
-      <!-- Sidebar -->
-      <aside id="sidebar">
-	    <section id="search-box">
-          {% include widgets/search_box %}
+        <section id="main">
+            <!-- Main Content -->
+            <div id="main-inner">
+                <div id="loader"><img src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
+                <div id="main-content">
+                    {{ content }}
+                </div>
+            </div>
+            {% include widgets/baidu_share %}
+            {% include widgets/back_top_button %}
         </section>
-        <section{% if page.date or page.title == '存档' or page.title == site.title %} class="active"{% endif %}>
-          {% include widgets/recent_posts_list %}
-        </section>
-        <section{% if page.title == '分类'  %} class="active"{% endif %}>
-          {% include widgets/categories_list %}
-        </section>
-		<section{% if page.title == '标签'%} class="active"{% endif %}>
-          {% include widgets/tag_cloud %}
-        </section>
-		<section>
-          {% include widgets/recent_visitors %}
-        </section>
-		<section>
-          {% include widgets/recent_comments %}
-        </section>
-       </aside>
 
-      <!-- Main Content -->
-      <div id="main-inner">
-        <div id="loader"><img src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
-        <div id="main-content">
-          {{ content }}
-        </div>
-      </div>
-      {% include widgets/baidu_share %}
-      {% include widgets/back_top_button %}
 
-    </section>
-
-    <footer id="bottom">
-      <p align="center" valign="middle">
-	  &copy; 2013-{{ site.time | date: '%Y' }} <a href="http://weibo.com/hustlei" target="_blank" title="Author's Sina Wibo Main Page">lileilei</a> All Rights Reserved.</p>
-
-      <p align="center">本站基于<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-      和<a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>构建 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<font color="#666666">
-     {% include widgets/statcounter %}</font>
-      </p>
-    </footer>
-  </div>
-
- 
+        <footer id="bottom">
+            <p align="center">
+                <a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我" style="margin-right: 20">关于我</a>
+                <a href="{{ site.JB.links_path }}" rel="nofollow" title="友情链接" style="margin-right: 20">友情链接</a>
+                <a href="{{ site.JB.messages_path }}" rel="nofollow" title="留言板">留言板</a>
+            </p>
+            <p align="center">
+                本站基于<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+                和<a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>构建 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#666666">
+                    {% include widgets/statcounter %}
+                </font>
+            </p>
+            <p align="center" valign="middle">
+                &copy; 2013-{{ site.time | date: '%Y' }} <a href="http://weibo.com/hustlei" target="_blank" title="Author's Sina Wibo Main Page">lileilei</a> All Rights Reserved.
+            </p>
+        </footer>
+    </div>
 
 </body>
 </html>
