correct assets_path
the assets_path is /assets/themes/twitter in my computer,but is
/assets/themes/twitter/ on github

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -21,10 +21,10 @@
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
     {% include lei_custom %}
     <!-- Styles -->
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.min.css">
-    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/themes/twitter/css/style.min.css">
+    <link rel="stylesheet" href="/assets/themes/twitter/css/font-awesome.min.css">
     <!-- Scripts -->
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="/assets/themes/twitter/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="/assets/lei_assets/clock_time_gbk.js"></script>
 </head>
 
@@ -81,7 +81,7 @@
         <section id="main">
             <!-- Main Content -->
             <div id="main-inner">
-                <div id="loader"><img src="{{ ASSET_PATH }}/img/loading.gif" alt="请稍侯"></div>
+                <div id="loader"><img src="/assets/themes/twitter/img/loading.gif" alt="请稍侯"></div>
                 <div id="main-content">
                     {{ content }}
                 </div>
