--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <!--[if IE 8 ]><meta http-equiv="X-UA-Compatible" content="IE=7"><![endif]-->
-    <title>{% if page.title %} {% if page.tagline == "主页" %} {{ site.title }} -  {{ page.title }} {% else %} {{ page.title }}-{{ site.title}} {% endif %} {% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.title %} {% if page.tagline == "Home Page" %} {{ site.title }} -  {{ page.title }} {% else %} {{ page.title }}-{{ site.title}} {% endif %} {% else %}{{ site.title }}{% endif %}</title>
     {% if page.keywords %}
     <meta name="keywords" content="{{ page.keywords | join: " ," }}">{% endif %}
     {% if page.description %}
