--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -29,7 +29,8 @@
 </head>
 
 <body>
-    <div class="fixbar" style="position:fixed;width:900px;height:25px;left:0;right:0;top:0;margin:0 auto;z-index:1001;border:1px solid #EEEEEE;background: #FAFAFA;line-height:25px;">
+  <div class="fixbar" style="position:fixed;height:25px;left:0;right:0;top:0;z-index:1001;border:1px solid #EEEEEE;background: #FAFAFA;line-height:25px;">
+  <div style="max-width:900px;margin:0 auto;">
        <div style="float:left;"><script type="text/javascript">CalConv();</script></div>
        <div style="float:right;">
          <span id="search-box">{% include widgets/search_box %}</span>
@@ -37,6 +38,7 @@
          <span><a href="{{ site.JB.messages_path }}" rel="nofollow" title="留言板">留言板</a></span>
          <span>{% include lei_widgets/add_fav %}</span>         
        </div>
+    </div>
     </div>
         <header id="top" style="background:rgba(45,135,251,0.9); padding:80px 0 20px 0">
            <style>
