change header and footer

--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -25,50 +25,55 @@
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/mystyle.css">
 </head>
 <body>
-    <header id="top" class="jumbotron p-1">
-        <div class="container px-2">
+    <header id="top">
+        <div class="jumbotron container p-1 hidden-xs-down">
             <nav class="navbar navbr-light hidden-sm-down">
-                <div class="float-xs-right">
+                <div class="float-xs-right mr-2">
                     <a href="{{ site.JB.messages_path }}" rel="nofollow" title="留言板">留言板</a>
                     <span>/</span>
                     <a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我">关于</a>
                 </div>
             </nav>
-            <div class="text-xs-center hidden-xs-down my-2">
+            <div class="text-xs-center my-2">
                 <h2>If you do not leave me</h2>
                 <h2> I will be by your side until the end.</h2>
             </div>
-            <!-- Navigation Bar -->
-            {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
-            <nav id="navbar" class="navbar navbr-light">
+        </div>
+        <!-- Navigation Bar -->
+        {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
+        <div class="container px-0">
+            <div class="row px-3 my-0">
+            <nav id="navbar" class="navbar navbr-light col-md-8">
                 <span class="nav navbar-nav">
-                    <a class="nav-item nav-link" {% if page.url == home_url %} class="active" {% endif %}
+                    <a class="nav-item nav-link {% if page.url == home_url %} active {% endif %}"
                        href="/" rel="nofollow">Home</a>
-                    <a class="nav-item nav-link" {% if page.url == site.JB.pkmcategories_path %} class="active" {% endif %}
-                       href="{{ site.JB.pkmcategories_path }}" rel="nofollow" title="PKM">PKM</a>
-                    <a class="nav-item nav-link" {% if page.url == site.JB.itcategories_path %} class="active" {% endif %}
-                       href="{{ site.JB.itcategories_path }}" rel="nofollow" title="IT">IT</a>
-                    <a class="nav-item nav-link" {% if page.url == site.JB.designcategories_path %} class="active" {% endif %}
-                       href="{{ site.JB.designcategories_path }}" rel="nofollow" title="DESIGN">Design</a>
-                    <a class="nav-item nav-link" {% if page.url == site.JB.lifecategories_path %} class="active" {% endif %}
-                       href="{{ site.JB.lifecategories_path }}" rel="nofollow" title="LIFE">Life</a>
-                    <a class="nav-item nav-link" {% if page.url == site.JB.music_path %} class="active" {% endif %}
-                       href="{{ site.JB.music_path }}" rel="nofollow" title="音乐">音乐</a>
+                    <a class="nav-item nav-link {% if page.url == site.JB.pkmcategories_path %} active {% endif %}"
+                       href="{{ site.JB.pkmcategories_path }}" rel="nofollow">PKM</a>
+                    <a class="nav-item nav-link {% if page.url == site.JB.itcategories_path %} active {% endif %}"
+                       href="{{ site.JB.itcategories_path }}" rel="nofollow">IT</a>
+                    <a class="nav-item nav-link {% if page.url == site.JB.designcategories_path %} active {% endif %}"
+                       href="{{ site.JB.designcategories_path }}" rel="nofollow">Design</a>
+                    <a class="nav-item nav-link {% if page.url == site.JB.lifecategories_path %} active {% endif %}"
+                       href="{{ site.JB.lifecategories_path }}" rel="nofollow">Life</a>
+                    <a class="nav-item nav-link {% if page.url == site.JB.music_path %} active {% endif %}"
+                       href="{{ site.JB.music_path }}" rel="nofollow">音乐</a>
                 </span>
             </nav>
-            <form id="search-form" class="input-group input-group-sm float-md-right" style="width: 200px">
+            <form id="search-form" class="input-group input-group-sm col-md-4 float-md-right" style="width: 200px">
                 <input id="query" type="text" class="form-control" placeholder="支持正则搜索">
                 <span class="input-group-btn"><button type="submit" class="btn btn-secondary">search</button></span>
             </form>
+            </div>
+            <hr/>
         </div>
     </header>
 
-    <div class="container px-3">
-        <section id="main">
-            {{ content }}
-        </section>
+    <section id="main" class="container p-3">
+       {{ content }}
+    </section>
 
-        <footer id="bottom" class="footer m-1">
+    <footer id="bottom" class="footer m-1">
+        <div class="container">
             <hr class="my-1"/>
             <div class="row text-xs-center db-footer-links px-3">
                 <a class="col-md-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
@@ -77,18 +82,16 @@
             </div>
             <hr class="my-1" />
             <div class="row">
-                <div class="col-md-3 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;" alt="扫我浏览" /></div>
-                <div class="col-md-9">
-                    <p>
-                        本站基于<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-                        和<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>构建.
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#666666">{% include widgets/statcounter %}</font>
-                    </p>
+                <div class="col-md-6 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;" alt="扫我浏览" /></div>
+                <div class="col-md-6">
+                    <p>{% include widgets/statcounter %}</p>
                     <p>&copy; 2013-{{ site.time | date: '%Y' }} <a href="http://weibo.com/hustlei" target="_blank" title="Author's Sina Wibo Main Page">lileilei</a> All Rights Reserved.</p>
+                    <p>本站基于<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+                        和<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>构建.</p>
                 </div>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
     <!-- Scripts -->
     <script type="text/javascript" defer src="{{ ASSET_PATH }}/js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" defer src="{{ ASSET_PATH }}/bootstrap-4.0/js/bootstrap.min.js"></script>
