--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -18,69 +18,78 @@
     <!-- Bootstrap core css and custom styles -->
     <link rel="stylesheet" href="{{ ASSET_PATH }}/bootstrap-4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/mystyle.css">
+    <link rel="stylesheet" href="{{ ASSET_PATH }}/css/pygments.css">
 </head>
 <body>
-    <header id="top" class="jumbotron my-0 p-0 pb-3">
-        <div class="container p-0 hidden-xs-down">
-            <nav class="navbar navbr-light hidden-sm-down">
-                <div class="float-xs-right">
-                    <a href="{{ site.JB.messages_path }}" class="text-muted" rel="nofollow" title="留言板">留言板</a>
-                    <span class="text-muted">/</span>
+    <header id="header" style="background: #373c3a">
+        <div class="container">
+            <div class="clearfix">
+                <button class="navbar-toggler float-xs-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#nav-header"></button>
+                <a class="navbar-brand text-muted" href="/">Home</a>
+                <nav class="float-xs-right hidden-xs-down">
                     <a href="{{ site.JB.about_path }}" class="text-muted" rel="nofollow" title="关于我">关于</a>
-                </div>
-            </nav>
-            <div class="text-xs-center">
+                    <span class="text-muted">/</span>
+                    <a href="{{ site.JB.messages_path }}" class="text-muted" rel="nofollow" title="留言板">留言板</a>
+                </nav>
+            </div>
+            <section class="text-xs-center hidden-xs-down pt-1 pb-2 text-white">
                 <h2>If you do not leave me</h2>
                 <h2> I will be by your side until the end.</h2>
-            </div>
+            </section>
         </div>
     </header>
-    <section id="nav" class="container">
-        <!-- Navigation Bar -->
-        <nav class="navbar navbar-light bg-faded">
-            <button class="navbar-toggler float-xs-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header"></button>
-            <ul id="navbar-header" class="nav navbar-nav collapse navbar-toggleable-xs">
-                {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
-                <li class="nav-item {% if page.url == home_url %} active {% endif %}">
-                    <a class="nav-link" href="/" rel="nofollow">Home</a>
-                </li>
-                <li class="nav-item {% if page.url == site.JB.pkmcategories_path %} active {% endif %}">
-                    <a class="nav-link" href="{{ site.JB.pkmcategories_path }}" rel="nofollow">PKM</a>
-                </li>
-                <li class="nav-item {% if page.url == site.JB.itcategories_path %} active {% endif %}">
-                    <a class="nav-link" href="{{ site.JB.itcategories_path }}" rel="nofollow">IT</a>
-                </li>
-                <li class="nav-item {% if page.url == site.JB.designcategories_path %} active {% endif %}">
-                    <a class="nav-link" href="{{ site.JB.designcategories_path }}" rel="nofollow">Design</a>
-                </li>
-                <li class="nav-item {% if page.url == site.JB.lifecategories_path %} active {% endif %}">
-                    <a class="nav-link" href="{{ site.JB.lifecategories_path }}" rel="nofollow">Life</a>
-                </li>
-                <li class="nav-item {% if page.url == site.JB.music_path %} active {% endif %}">
-                    <a class="nav-link" href="{{ site.JB.music_path }}" rel="nofollow">音乐</a>
-                </li>
-            </ul>
-        </nav>
-            <form id="search-form" class="input-group input-group-sm form-inline float-sm-right float-xs-center" style="max-width: 240px">
-                <input id="query" type="text" class="form-control" placeholder="支持正则搜索">
-                <span class="input-group-btn"><button type="submit" class="btn btn-secondary">search</button></span>
-            </form>
+    <section id="nav-main" style="background: #242424">
+        <div class="container">
+            <div class="row">
+                <nav class="collapse navbar-toggleable-xs col-sm-8" id="nav-header">
+                    <ul class="nav navbar-nav">
+                        {% capture home_url %}{{ HOME_PATH | append: '/index.html' | replace: '//', '/' }}{% endcapture %}
+                        <li class="nav-item {% if page.url == home_url %} active {% endif %}">
+                            <a class="nav-link" href="/" rel="nofollow">Home</a>
+                        </li>
+                        <li class="nav-item {% if page.url == site.JB.pkmcategories_path %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.pkmcategories_path }}" rel="nofollow">PKM</a>
+                        </li>
+                        <li class="nav-item {% if page.url == site.JB.itcategories_path %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.itcategories_path }}" rel="nofollow">IT</a>
+                        </li>
+                        <li class="nav-item {% if page.url == site.JB.designcategories_path %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.designcategories_path }}" rel="nofollow">Design</a>
+                        </li>
+                        <li class="nav-item {% if page.url == site.JB.lifecategories_path %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.lifecategories_path }}" rel="nofollow">Life</a>
+                        </li>
+                        <li class="nav-item {% if page.url == site.JB.music_path %} active {% endif %}">
+                            <a class="nav-link" href="{{ site.JB.music_path }}" rel="nofollow">音乐</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="float-sm-right col-sm-4 col-xs-12">
+                    <form id="search-form" class="input-group input-group-sm w-search">
+                        <input id="query" type="text" class="form-control" placeholder="支持正则搜索">
+                        <span class="input-group-btn"><button type="submit" class="btn btn-primary">search</button></span>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
-    <section id="main" class="container">
+    <main id="main" class="container">
         {{ content }}
+    </main>
+    <section id="nav-bottom" class="container">
+        <hr class="my-1" />
+        <nav class="row text-xs-center db-footer-links px-3">
+            <a class="col-md-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
+            <a class="col-md-4" href="{{ site.JB.messages_path }}" rel="nofollow">留言板</a>
+            <a class="col-md-4" href="{{ site.JB.about_path }}" rel="nofollow">关于我</a>
+        </nav>
+        <hr class="my-1" />
     </section>
     <footer id="footer" class="footer">
         <div class="container">
-            <hr class="my-1" />
-            <div class="row text-xs-center db-footer-links px-3">
-                <a class="col-md-4" href="{{ site.JB.links_path }}" rel="nofollow">友情链接</a>
-                <a class="col-md-4" href="{{ site.JB.messages_path }}" rel="nofollow">留言板</a>
-                <a class="col-md-4" href="{{ site.JB.about_path }}" rel="nofollow">关于我</a>
-            </div>
-            <hr class="my-1" />
             <div class="row">
-                <div class="col-md-6 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;" alt="二维码" /></div>
-                <div class="col-md-6">
+                <div class="col-md-4 text-xs-center"><img src="/assets/qr.png" style="max-width: 200px;" alt="二维码" /></div>
+                <div class="col-md-8">
                     <p>{% include widgets/statcounter %}</p>
                     <p>&copy; 2013-{{ site.time | date: '%Y' }} <a href="http://weibo.com/hustlei" target="_blank" title="Author's Sina Wibo Main Page">lileilei</a> All Rights Reserved.</p>
                     <p>
