--- a/assets/themes/lei-metro/css/mystyle.css
+++ b/assets/themes/lei-metro/css/mystyle.css
@@ -1,8 +1,43 @@
 /* 行内强制不换行显示省略号*/
 .nobr {
-overflow:hidden;
-white-space:nowrap;
-text-overflow:ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+@media (min-width: 576px) {
+  .w-search {
+    max-width: 300px;
+    margin: 0.35rem auto;
+  }
+  #header div{
+    padding: 0 2rem;
+  }
+  #nav-main div{
+    padding: 0 1.5rem;
+  }
+  #content{
+    padding: 1.5rem 1.5rem 0  1.5rem;
+  }
+  #content-footer{
+    padding: 0 1.5rem;
+  }
+}
+#footer{
+  background-color: #f5f5f5;
+}
+.tag_box{
+  padding-left: 0;
+  list-style: none;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.tag_box li{
+  display: inline-block;
+  margin-right: 1rem;
+}
+.highlighter-rouge{
+  border: 1px solid #ddd;
+  border-radius: 3px;
 }
 /*目录序号*/
 #markdown-toc li:before {
