--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -64,7 +64,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="float-sm-right col-sm-4 col-xs-12">
+                <div class="float-sm-right col-sm-4 px-0">
                     <form id="search-form" class="input-group input-group-sm w-search">
                         <input id="query" type="text" class="form-control" placeholder="支持正则搜索">
                         <span class="input-group-btn"><button type="submit" class="btn btn-primary">search</button></span>
