修复导航栏在手机里collapse按钮不显示的问题

--- a/_includes/themes/lei-metro/default.html
+++ b/_includes/themes/lei-metro/default.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <header id="header" style="background: #373c3a">
-        <div class="container">
-            <div class="clearfix">
+        <div class="container pr-0">
+            <div class="clearfix navbar-dark">
                 <button class="navbar-toggler float-xs-right hidden-sm-up" type="button" data-toggle="collapse" data-target="#nav-header"></button>
                 <a class="navbar-brand text-muted" href="/">Home</a>
                 <nav class="float-xs-right hidden-xs-down">
@@ -67,7 +67,7 @@
                 <div class="float-sm-right col-sm-4 px-0">
                     <form id="search-form" class="input-group input-group-sm w-search">
                         <input id="query" type="text" class="form-control" placeholder="支持正则搜索">
-                        <span class="input-group-btn"><button type="submit" class="btn btn-primary">search</button></span>
+                        <span class="input-group-btn"><button type="submit" class="btn btn-primary">搜&nbsp;索</button></span>
                     </form>
                 </div>
             </div>
